--- a/backend/evaluation-service/src/main/resources/application.properties
+++ b/backend/evaluation-service/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=evaluation-service
 spring.config.import=optional:configserver:http://localhost:8090/
 spring.profiles.active=dit
-spring.datasource.url=jdbc:postgresql://localhost:5432/T1
+spring.datasource.url=jdbc:postgresql://localhost:5432/bank
 
 logging.level.org.hibernate.SQL=DEBUG
 
